ayiou/tests/ui/default_no_adapter_driver.rs
fn main() {
    let _ = std::any::type_name::<ayiou::adapter::console::adapter::ConsoleAdapter>();
    let _ = std::any::type_name::<ayiou::driver::wsclient::WsDriver>();
}
